--- a/src/app/modules/entidades/components/entidade-form/entidade-form.component.html
+++ b/src/app/modules/entidades/components/entidade-form/entidade-form.component.html
@@ -25,7 +25,7 @@
 					</div>
 					<div>
 						<label for="especialidades" class="flex items-center gap-1"
-							><span>Especialidades</span> <span class="text-xs italic text-foreground">(min. 5 itens)</span></label
+							><span>Especialidades</span> <span class="text-xs italic font-normal text-foreground opacity-70">(min. 5 itens)</span></label
 						>
 						<app-multi-selector
 							formControlName="especialidades"
