--- a/src/app/shared/alert/components/alert.component.html
+++ b/src/app/shared/alert/components/alert.component.html
@@ -1,4 +1,4 @@
-<div class="fixed z-[1080] top-4 flex flex-col gap-4 right-4 overflow-y-auto h-auto max-h-screen hide-scrollbar">
+<div class="fixed z-[1080] top-2 md:top-3 xl:top-4 right-2 md:right-3 xl:right-4 flex flex-col gap-4 overflow-y-auto h-auto max-h-screen hide-scrollbar">
 	@for (alert of alerts; track $index) {
 		<div class="fade-in alert" [ngClass]="alert.type === 'error' ? 'alert-erro' : 'alert-success'">
 			<span class="first-uppercase">{{ alert.message }}</span>
