Feat :sparkles: Implememtação do gerenciamento de estado para dados de autenticação para evitar acesso banal ao local storage.

--- a/src/app/modules/entidades/views/read/read.component.html
+++ b/src/app/modules/entidades/views/read/read.component.html
@@ -42,8 +42,8 @@
 												class="inline-flex gap-1 font-semibold text-primary"
 												(click)="openModal(entidade)"
 											>
-												<app-icon icon="heroListBullet" class="text-xl" />
-												Mais {{ entidade.especialidades.length - 5 }}
+												<app-icon icon="heroPlus" class="text-xl" />
+												{{ entidade.especialidades.length - 5 }}
 											</button>
 										</li>
 									}
