--- a/src/app/shared/pagination/pagination.component.scss
+++ b/src/app/shared/pagination/pagination.component.scss
@@ -3,7 +3,7 @@
 }
 
 .pagination-button {
-	@apply cursor-pointer rounded-none text-sm border px-3 py-1.5;
+	@apply cursor-pointer rounded-none text-sm border px-3 py-1.5 min-w-[34px] shrink-0;
 }
 
 .pagination-button:disabled {
